Updated the README

--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-# _Project_
+# ps-intro-to-node
 
-_Description: What does this project do and who does it serve?_
+A basic project working through a nodejs tutorial.
 
-## Project Setup
